<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context="com.example.android.cookrecipes.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Inicio1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Pescado al vapor a las finas hierbas"
                    android:gravity="start"
                    android:textSize="35dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/titulo"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Instrucciones de elaboración:\n"
                        android:textColor="@color/subtitulo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inst_pescado_al_vapor"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredientes (2 porciones):\n"
                        android:textColor="@color/subtitulo"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingre_pescado_al_vapor"
                        android:layout_marginBottom="10dp"/>

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pescado_hierbas" />


                </LinearLayout>
            </LinearLayout>
            <!-- OTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/divisorLine"/>
            </LinearLayout>
            <!-- Inicio2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Almejas salteadas"
                    android:gravity="start"
                    android:textSize="35dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/titulo"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Instrucciones de elaboración:\n"
                        android:textColor="@color/subtitulo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inst_almejas_salteadas"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredientes (4 porciones):\n"
                        android:textColor="@color/subtitulo"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingre_almejas_salteadas"
                        android:layout_marginBottom="10dp"/>

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/almejas_salteadas" />

                </LinearLayout>
            </LinearLayout>
            <!-- OTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/divisorLine"/>
            </LinearLayout>
            <!-- Inicio3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Trucha al jamón"
                    android:gravity="start"
                    android:textSize="35dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/titulo"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Instrucciones de elaboración:\n"
                        android:textColor="@color/subtitulo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inst_trucha_al_jamon"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredientes (2 porciones):\n"
                        android:textColor="@color/subtitulo"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingre_inst_trucha_al_jamon"
                        android:layout_marginBottom="10dp"/>

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/trucha_al_jamon" />


                </LinearLayout>
            </LinearLayout>
            <!-- OTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/divisorLine"/>
            </LinearLayout>
            <!-- Inicio4 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Bistec a la fiorentina"
                    android:gravity="start"
                    android:textSize="35dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/titulo"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Instrucciones de elaboración:\n"
                        android:textColor="@color/subtitulo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inst_bistec_a_la_fiorentina"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredientes (4 porciones):\n"
                        android:textColor="@color/subtitulo"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingre_bistec_a_la_fiorentina"
                        android:layout_marginBottom="10dp"/>

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/bistec_a_la_fiorentina" />


                </LinearLayout>
            </LinearLayout>
            <!-- OTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/divisorLine"/>
            </LinearLayout>
            <!-- Inicio5 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Macarrones con chorizo"
                    android:gravity="start"
                    android:textSize="35dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/titulo"
                    android:layout_marginBottom="10dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Instrucciones de elaboración:\n"
                        android:textColor="@color/subtitulo"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inst_macarrones_con_chorizo"
                        android:layout_marginBottom="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ingredientes (4 porciones):\n"
                        android:textColor="@color/subtitulo"
                        android:layout_marginBottom="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingre_macarrones_con_chorizo"
                        android:layout_marginBottom="10dp"/>

                    <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/macarrones_con_chorizo" />


                </LinearLayout>
            </LinearLayout>
            <!-- OTRO -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="@color/divisorLine"/>
            </LinearLayout>

            <!-- FIN-->
        </LinearLayout>

    </ScrollView>
</LinearLayout>

